envs/dev/hint-service/service-app-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: hint
