envs/dev/hint-service/service-metrics-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  selector:
    app: hint-metrics
